# grpc_demo

./: README.md  test_proto_server.cpp
easy_send_msg/: CMakeLists.txt  test_proto_client.cpp
easy_send_msg/proto/: testProto.proto
func_call/: CMakeLists.txt  func_call_client.cpp  func_call_server.cpp
func_call/proto/: remoteFunction.proto
